# boss

./: .gitignore  .projectile  LICENCE  README.md  README.org  boss  build.bash  cloud-init.yaml  provision-remote-server.org  pyproject.toml  sink.yaml
.github/workflows/: build-boss.yaml  test.yaml
boss/: __main__.py  aptproxy.py  bash.py  bashrc.py  composer.py  craft2.py  craft3.py  dist.py  done.py  fakesmtp.py  lamp.py  newuser.py  php.py  phpinfo.py  phpmyadmin.py  util.py  virtualhost.py  wordpress.py  xdebug.py
boss/mods/: aptproxy.py  bashrc.py  cert.py  composer.py  craft.py  databases.py  django.py  done.py  example.py  fakesmtp.py  first.py  lamp.py  netdata.py  newuser.py  php.py  phpmyadmin.py  virtualhost.py  webmin.py  webservers.py
boss/resources/: pagga.tlf
man/: boss.1
packagelists/: README.md  ubuntu-14.04-trusty-allpackages  ubuntu-24.04-allpackages
scripts/: boss.1.template  build.py
src/: __main__.py  bash.py  dist.py  errors.py  util.py
src/boss/: bash.py  cli.py  dist.py  errors.py  util.py
src/boss/mods/: aptproxy.py  bashrc.py  cert.py  craft.py  databases.py  django.py  done.py  example.py  (+12 more)
src/mods/: aptproxy.py  bashrc.py  cert.py  craft.py  databases.py  django.py  done.py  example.py  fakesmtp.py  first.py  lamp.py  netdata.py  newuser.py  php.py  phpmyadmin.py  virtualhost.py  webmin.py  webservers.py  wordpress.py
src/resources/: sm.tlf
tests/: setup.bash  test.bash  vm.bash
tests/ubuntu-14_04/: Vagrantfile
tests/ubuntu-16_04/: Vagrantfile
tests/ubuntu-18_04/: Vagrantfile
tests/ubuntu-24_04/: Vagrantfile
