[project]
name = "boss"
version = "2.1.0"
description = "Provision a server"
readme = "README.md"
authors = [
    { name = "Sheldon McGrandle", email = "developer@8cylinder.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "distro>=1.9.0",
    "rich>=13.9.4",
]

[tool.setuptools.data-files]
"share/man/man1" = ["man/boss.1"]

[project.scripts]
boss = "boss:cli.boss"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pyright>=1.1.401",
    "ruff>=0.11.0",
]
